--- a/themes/temaic/layouts/partials/head.html
+++ b/themes/temaic/layouts/partials/head.html
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
 <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
 
