--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -1,3 +1,24 @@
+<div id="links-header">
+<a href="https://ufrj.br/">UFRJ<i class="bi bi-arrow-up-right"></i></a>
+<a href="https://ccmn.ufrj.br/">CCMN<i class="bi bi-arrow-up-right"></i></a>
+<a href="https://ppgi.ufrj.br/">PPGI<i class="bi bi-arrow-up-right"></i></a>
+<a href="https://ouvidoria.ufrj.br/">Ouvidoria UFRJ<i class="bi bi-arrow-up-right"></i></a>
+<a href="https://intranet.ufrj.br/">Intranet<i class="bi bi-arrow-up-right"></i></a>
+<a href="https://ejcm.com.br/">EjCM<i class="bi bi-arrow-up-right"></i></a>
+</div>
+<div id="main-header">
+  <a href="{{ "/" | relURL }}" id="header-ic-home">
+  <img src="/svg/logo-ic.svg" alt="Logo do IC">
+  <span>Instituto de Computação<br>UFRJ</span>
+  </a>
 
-<h1><a href="{{ "/" | relURL }}">{{ .Site.Title }}</a></h1>
+  <div id="header-elements">
+    <span>Informações</span>
+    <span>Graduação</span>
+    <span>Links</span>
+    <a href="{{ "/cadastro" | relURL }}">Cadastro</span>
+  </div>
+</div>
+
+
 
