Consertado erro do html do header

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -16,7 +16,7 @@
     <span>Informações</span>
     <span>Graduação</span>
     <span>Links</span>
-    <a href="{{ "/cadastro" | relURL }}">Cadastro</span>
+    <a href="{{ "/cadastro" | relURL }}">Cadastro</a>
   </div>
 </div>
 
