--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -1,24 +1,26 @@
-<div id="links-header">
-<a href="https://ufrj.br/">UFRJ<i class="bi bi-arrow-up-right"></i></a>
-<a href="https://ccmn.ufrj.br/">CCMN<i class="bi bi-arrow-up-right"></i></a>
-<a href="https://ppgi.ufrj.br/">PPGI<i class="bi bi-arrow-up-right"></i></a>
-<a href="https://ouvidoria.ufrj.br/">Ouvidoria UFRJ<i class="bi bi-arrow-up-right"></i></a>
-<a href="https://intranet.ufrj.br/">Intranet<i class="bi bi-arrow-up-right"></i></a>
-<a href="https://ejcm.com.br/">EjCM<i class="bi bi-arrow-up-right"></i></a>
-</div>
-<div id="main-header">
-  <a href="{{ "/" | relURL }}" id="header-ic-home">
-  <img src="/svg/logo-ic.svg" alt="Logo do IC">
-  <span>Instituto de Computação<br>UFRJ</span>
+<nav id="links-header">
+  <ul>
+    <li><a href="https://ufrj.br/">UFRJ<i class="bi bi-arrow-up-right"></i></a></li>
+    <li><a href="https://ccmn.ufrj.br/">CCMN<i class="bi bi-arrow-up-right"></i></a></li>
+    <li><a href="https://ppgi.ufrj.br/">PPGI<i class="bi bi-arrow-up-right"></i></a></li>
+    <li><a href="https://ouvidoria.ufrj.br/">Ouvidoria UFRJ<i class="bi bi-arrow-up-right"></i></a></li>
+    <li><a href="https://intranet.ufrj.br/">Intranet<i class="bi bi-arrow-up-right"></i></a></li>
+  </ul>
+</nav>
+
+<nav id="main-header">
+  <a href="{{ "/" | relURL }}">
+    <img src="/svg/logo-ic.svg" alt="Logo do IC" width="80px">
+    <p>Instituto de Computação<br>UFRJ</p>
   </a>
 
-  <div id="header-elements">
-    <span>Informações</span>
-    <span>Graduação</span>
-    <span>Links</span>
-    <a href="{{ "/cadastro" | relURL }}">Cadastro</a>
-  </div>
-</div>
+  <ul>
+    <li>Informações</li>
+    <li>Graduação</li>
+    <li>Links</li>
+    <li><a href="{{ "/cadastro" | relURL }}">Cadastro</a></li>
+  </ul>
+</nav>
 
 
 
