início da implementação do menu

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -15,10 +15,99 @@
   </a>
 
   <ul>
-    <li>Informações</li>
-    <li>Graduação</li>
-    <li>Links</li>
-    <li><a href="{{ "/cadastro" | relURL }}">Cadastro</a></li>
+    <li>
+      <span>O Instituto</span>
+      <ul>
+        <li>
+          <span></span>
+          <ul>
+            <li><a>História</a></li>
+            <li><a>Missão, Visão e Valores</a></li>
+            <li><a>Espaço Físico</a></li>
+            <li><a>Estrutura Administrativa</a></li>
+            <li><a>Identidade Visual</a></li>
+            <li><a>Localização</a></li>
+            <li><a>Contato</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Pessoas</span>
+          <ul>
+            <li>Docentes</li>
+            <li>Corpo Técnico</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <span>Ensino</span>
+      <ul>
+        <li>
+          <span>Ciência da Computação</span>
+          <ul>
+            <li><a>Grade Curricular</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>BCMT</span>
+          <ul>
+            <li><a>Ênfase em Análise de Dados</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Graduação em Geral</span>
+          <ul>
+            <li><a>Disciplinas de Formação</a></li>
+            <li><a>Calendário Acadêmico</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Pós-Graduação</span>
+          <ul>
+            <li><a>PPGI</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <span>Oportunidades</span>
+      <ul>
+        <li>
+          <span>Pesquisa</span>
+          <ul>
+            <li><a>Grupos de Pesquisa</a></li>
+            <li><a>Projetos em Andamento</a></li>
+            <li><a>Iniciação Científica</a></li>
+            <li><a>Editais</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Extensão</span>
+          <ul>
+            <li><a>Projetos de Extensão</a></li>
+          </ul>
+        </li>
+        <li>
+          <span></span>
+          <ul>
+            <li><a>Vagas</a></li>
+            <li><a>Concursos</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <!-- TODO: Os itens originalmente colocados aqui não fazem muito sentido estarem aqui -->
+      <span>Área do Aluno</span>
+      <ul>
+        <li>
+          <span></span>
+          <ul>
+            <li><a>Cadastro de Alunos</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
   </ul>
 </nav>
 
