menu feio mas funcional

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -33,8 +33,8 @@
         <li>
           <span>Pessoas</span>
           <ul>
-            <li>Docentes</li>
-            <li>Corpo Técnico</li>
+            <li><a>Docentes</a></li>
+            <li><a>Corpo Técnico</a></li>
           </ul>
         </li>
       </ul>
