--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -95,8 +95,7 @@
       </ul>
     </li>
     <li>
-      <!-- TODO: Os itens originalmente colocados aqui não fazem muito sentido estarem aqui -->
-      <span>Área do Aluno</span>
+      <span>Usuário</span>
       <ul>
         <li>
           <ul>
