--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -10,7 +10,7 @@
 
 <nav id="main-header">
   <a href="{{ "/" | relURL }}">
-    <img src="/svg/logo-ic.svg" alt="Logo do IC" width="80px">
+    <img src="/svg/logo-ic-branca.svg" alt="Logo do IC" width="80px">
     <p>Instituto de Computação<br>UFRJ</p>
   </a>
 
