menu pode ser selecionado com teclado agora

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -20,7 +20,7 @@
       <ul>
         <li>
           <ul>
-            <li><a>História</a></li>
+            <li><a href="{{ "/historia" | relURL }}">História</a></li>
             <li><a>Missão, Visão e Valores</a></li>
             <li><a>Espaço Físico</a></li>
             <li><a>Estrutura Administrativa</a></li>
