esqueleto do footer

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -1,2 +1,38 @@
+<div class="superior">
+  <div>
+    <h2>Localização</h2>
+    <p>
+      Centro de Ciências Matemáticas e da Natureza
+      <br>Avenida Athos da Silveira Ramos, 274
+      <br>Cidade Universitária
+      <br>Rio de Janeiro, RJ, Brasil
+    </p>
+    <p>
+      CEP: 21941-916
+    </p>
+    <p>
+      Tel.: +55 21 3938-3338 / 3938-3393 / 3938-9516
+    </p>
+  </div>
+  <div>
+    <h2>Endereço para Correspondência</h2>
+    <p>
+      Instituto de Computação
+      <br>Universidade Federal do Rio de Janeiro
+      <br>Caixa Postal: 68.530
+      <br>CEP: 21941-590
+      <br>Rio de Janeiro, RJ, Brasil
+    </p>
+  </div>
+</div>
 
+<div class="inferior">
+  <span class="copyright">
+    © Todos os direitos reservados - Instituto de Computação / UFRJ
+  </span>
+  <ul class="social">
+    <li><a href="https://youtube.com/">Símbolo do youtube</a></li>
+    <li><a href="https://youtube.com/">Símbolo do github</a></li>
+  </ul>
+</div>
 
