estilo do footer

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="superior">
   <div>
-    <h2>Localização</h2>
+    <span>Localização</span>
     <p>
       Centro de Ciências Matemáticas e da Natureza
       <br>Avenida Athos da Silveira Ramos, 274
@@ -15,7 +15,7 @@
     </p>
   </div>
   <div>
-    <h2>Endereço para Correspondência</h2>
+    <span>Endereço para Correspondência</span>
     <p>
       Instituto de Computação
       <br>Universidade Federal do Rio de Janeiro
