--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -10,9 +10,6 @@
     <p>
       CEP: 21941-916
     </p>
-    <p>
-      Tel.: +55 21 3938-3338 / 3938-3393 / 3938-9516
-    </p>
   </div>
   <div>
     <span>Endereço para Correspondência</span>
@@ -22,6 +19,17 @@
       <br>Caixa Postal: 68.530
       <br>CEP: 21941-590
       <br>Rio de Janeiro, RJ, Brasil
+    </p>
+  </div>
+  <div>
+    <span>Contato</span>
+    <p>
+      Tel.: +55 21 3938-3338
+      <br>Tel.: +55 21 3938-3393
+      <br>Tel.: +55 21 3938-9516
+    </p>
+    <p>
+      <a href="{{ "/info/contato" | relURL }}">Mais informações de Contato</a>
     </p>
   </div>
 </div>
