--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -10,7 +10,7 @@
 
 <nav id="main-header">
   <a href="{{ "/" | relURL }}">
-    <img src="/svg/logo-ic-branca.svg" alt="Logo do IC" width="80px">
+    <img src="{{ "/svg/logo-ic-branca.svg" | relURL }}" alt="Logo do IC" width="80px">
     <p>Instituto de Computação<br>UFRJ</p>
   </a>
 
@@ -34,6 +34,7 @@
           <ul>
             <li><a>Docentes</a></li>
             <li><a>Corpo Técnico</a></li>
+            <li><a href="{{ "/authors" | relURL }}">Lista de Autores do Site</a></li>
           </ul>
         </li>
       </ul>
