--- a/themes/temaic/layouts/autores/list.html
+++ b/themes/temaic/layouts/autores/list.html
@@ -15,12 +15,12 @@
   </article>
   <ul class="authors">
     <li>
-      <img src="{{ $author.avatar | relURL }}" alt="Foto do {{ $author.name }}" width="80px">
+      <img src="{{ $author.avatar }}" alt="{{ i18n "foto_de_perfil" }}" width="80px">
       <span>{{ $author.name }}</span>
       <p>
-        {{ $author.bio }}
+        {{ index $author.bio .Site.Language.Lang }}
       </p>
-      <a href="{{ "/authors/" | relURL }}">Ver outros autores</a>
+      <a href="{{ "/autores/" | relLangURL }}">{{ i18n "ver_mais_autores" }}</a>
     </li>
   </ul>
 {{ end }}
