--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -9,7 +9,7 @@
 </nav>
 
 <nav id="main-header">
-  <a href="{{ "/" | relURL }}">
+  <a href="{{ "/" | relLangURL }}">
     <img src="{{ "/svg/logo-ic-branca.svg" | relURL }}" alt="Logo do IC" width="80px">
     <p>Instituto de Computação<br>UFRJ</p>
   </a>
