fix: "Mais informações de contato" agora tem links diferentes em inglês e português

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -29,7 +29,7 @@
       <br>Tel.: +55 21 3938-9516
     </p>
     <p>
-      <a href="{{ "/artigos/contato" | relLangURL }}">{{ i18n "mais_informacoes_contato" }}</a>
+      <a href="{{ i18n "link_mais_informacoes_contato" }}">{{ i18n "mais_informacoes_contato" }}</a>
     </p>
   </div>
 </div>
