--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -356,19 +356,55 @@ article {
 	border-radius: 10px;
 }
 
-article h1, article h2, article h3, article h4, article h5, article h6 {
+article * {
 	margin: 10px 0;
 }
+
+article h1, article h2, article h3, article h4, article h5, article h6 {
+	margin: 20px 0;
+}
 article h1 { font-size: 160%; }
+article h1::before { color: var(--cor-ic2); content: "# " }
 article h2 { font-size: 150%; }
+article h2::before { color: var(--cor-ic2); content: "## " }
 article h3 { font-size: 140%; }
+article h3::before { color: var(--cor-ic2); content: "### " }
 article h4 { font-size: 130%; }
+article h4::before { color: var(--cor-ic2); content: "#### " }
 article h5 { font-size: 120%; }
+article h5::before { color: var(--cor-ic2); content: "##### " }
 article h6 { font-size: 110%; }
+article h6::before { color: var(--cor-ic2); content: "###### " }
 
 article p {
-	margin: 15px 0;
+	text-align: justify;
 }
+
+article p::before {
+	color: var(--cor-ic2);
+	content: "¶";
+	margin-right: 20px;
+}
+
+article p + p {
+	margin-top: 15px;
+}
+
+article ul, article ol {
+	list-style: initial;
+	margin-left: 25px;
+}
+
+article ul li::marker, article ol li::marker {
+	color: var(--cor-ic2);
+}
+
+article ul { list-style: disc; }
+article ul ul { list-style-type: circle; }
+article ul ul ul { list-style-type: square; }
+article ol { list-style: decimal; }
+article ol ol { list-style: upper-roman; }
+article ol ol ol {list-style: lower-latin; }
 
 
 
