--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -360,6 +360,15 @@ article * {
 	margin: 10px 0;
 }
 
+article .highlight * {
+	margin: 0;
+}
+
+article .highlight > pre {
+	padding: 10px;
+	border-radius: 10px;
+}
+
 article h1, article h2, article h3, article h4, article h5, article h6 {
 	margin: 20px 0;
 }
@@ -379,12 +388,7 @@ article h6 { font-size: 110%; }
 
 article p {
 	text-align: justify;
-}
-
-article p::before {
-	color: var(--cor-ic2);
-	content: "¶";
-	margin-right: 20px;
+	text-indent: 40px;
 }
 
 article p + p {
